# elfprobe

./: .gitignore  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
elfprobe-core/: Cargo.toml  README.md  rustfmt.toml
elfprobe-core/.cargo/: config.toml
elfprobe-core/sources/: constant.rs  core.rs  elf.rs  endian.rs  error.rs  file.rs  hex.rs  main.rs  pod.rs  primitive.rs  reader.rs  utils.rs
elfprobe-core/sources/core/: endian.rs  error.rs  pod.rs  primitive.rs  reader.rs
elfprobe-core/sources/elf/: abi.rs  aliases.rs  constants.rs  header.rs  identification.rs  magic.rs  sections.rs  types.rs
elfprobe-core/sources/read/: file.rs  mod.rs  reader.rs
elfprobe-core/sources/utils/: adapter.rs  constant.rs  file.rs  flags.rs  hex.rs  table.rs
elfprobe-macro/: Cargo.toml  README.md  rustfmt.toml
elfprobe-macro/sources/: buffer.rs  cursor.rs  derive.rs  either.rs  entry.rs  lib.rs  library.rs  literal.rs  parser.rs  rules.rs  token.rs
elfprobe-macro/sources/derive/: buffer.rs  cursor.rs  entry.rs  parser.rs  rules.rs  token.rs
elfprobe-macro/sources/parser/: attributes.rs  constants.rs  generics.rs  lifetimes.rs  types.rs  visibilities.rs
elfprobe-macro/tests/: dada.rs  literal.rs  pod.rs
