# See more keys and their definitions at:
# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "elfprobe-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "elfprobe-core"
path = "sources/main.rs"

[dependencies]
libc = "0.2"

# See feature options:
# https://doc.rust-lang.org/cargo/reference/features.html
# https://doc.rust-lang.org/nightly/cargo/reference/features.html#feature-resolver-version-2
[features]
unaligned = []
default = [ "unaligned" ]
